@@ -87,3 +87,4 @@ ins.differ, ins.differ * { background:#cfc; text-decoration:none; padding:1px 2p
 #pg_info a { width:100px; height:40px;}
 #pg_next {position:absolute; right:0; background:url('/images/popup_next.png?1276089554') no-repeat right top;}
 #pg_prev {position:absolute; left:0; background:url('/images/popup_prev.png?1276089554') no-repeat left top;}
+.zloading {opacity:0.4}
