@@ -11,6 +11,7 @@
  * Fixed label traduction for param.
  * Enable ajax response on Node destroy (use dummy update parameter).
  * Added 'sum' method on array. <===== TODO: Document
+ * Added 'loading' option to [filter].
 
 == 1.2.0, 1.2.1 2012-05-01
 
